welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:6: error: value a is not a member of Unit
	avance();avance();avance()a;vance()
                                  ^Runner:6: error: not found: value vance
	avance();avance();avance()a;vance()
                                    ^