welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var i=0
var k=0

for (i<-1 to 7) {
	avance();avance();avance()a;vance()
	gauche();gauche()
	droite();droite();droite();droite()
	droite();droite()
	gauche();gauche();gauche();gauche()
		
}
